--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "express-session": "^1.17.0",
     "handlebars": "^4.7.3",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.5"
+    "sequelize": "^5.22.5"
   },
   "devDependencies": {
-    "jest": "^29.0.3"
+    "jest": "^29.0.3",
+    "sequelize-cli": "^6.4.1"
   }
 }
