--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bootstrap": "^5.2.1",
     "connect-session-sequelize": "^6.1.1",
     "dotenv": "^8.6.0",
     "express": "^4.18.1",
